# fomo

./: LICENSE  README.md  pyproject.toml  setup.cfg
extract_names/: get_mnemonics_NIRSpec.py  get_mnemonics_SA.py  suggestions_MIRI.csv  suggestions_MIRI.txt  suggestions_NIRCAM.csv  suggestions_NIRCAM.txt  suggestions_SA.csv  suggestions_SA.txt
src/fomo/: plot_mnemonics.py
