[metadata]
name = fomo
author = fomo developers
author_email = sebastian.zieba@cfa.harvard.edu
description = a code to check for correlations between observations and JWST mnemonics
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = [LICENSE,]
url = https://github.com/sebastian-zieba/fomo
project_urls =
    Source Code = https://github.com/sebastian-zieba/fomo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.8
install_requires =
    matplotlib>=3.6 # Lower limit needed for set_layout_engine()
    spelunker

[options.packages.find]
where = src
